--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 		/>
 		<title>Rock Paper Scissors</title>
 		<link rel="stylesheet" href="style.css" />
+
+		<script src="main.js" defer></script>
 	</head>
 	<body>
 		<h1 class="heading">Rock, Paper, And Scissors</h1>
@@ -61,7 +63,8 @@
 				</div>
 			</div>
 		</div>
-
-		<script src="main.js"></script>
+		<div id="btn-container">
+			<button onclick="gameReset()" id="btn">RESET GAME</button>
+		</div>
 	</body>
 </html>
